# time-series-book

./: .gitignore  .jupyterbook_ignore  01_resources.md  README.md  myst.yml  notation.md  preface.md  pyproject.toml  references.bib  requirements.txt  robots.txt
.github/workflows/: deploy.yaml  deploy.yml
_build/html/: sitemap.xml
appendices/: notation.md
chapter_1_introduction/: 01_resources.md  01_time_series.md  02_characteristics.md  03_analysis_vs_forecasting.md  04_basic_models.md  10_resources.md
chapter_2_background_math/: 01_intro.md  02_geometric_series.md  03_eulers_formula.ipynb  03_eulers_formula.md  04_variance_covariance.md  05_information_criteria.md
chapter_3_autocovariance/: 01_intro.md  02_autocovariance.md  03_stationarity.md  04_autocorrelation.md  05_crosscorrelation.md  06_estimation.md
chapter_3_geometric_series/: 01_geometric_series.md
chapter_4_enforcing_stationarity/: 01_intro.md  02_trend.md  03_difference.md  03_seasonality.md  04_seasonality.md  04_unit_root.md  05_log_transform.md
chapter_5_decomposition/: 01_intro.md  02_classical_decomposition.md  03_loess.md  04_stl_decomposition.md
chapter_5_decomposition/images/: lowess_demo.html
chapter_6_arma/: 01_intro.md  02_autoregressive_models.md  03_moving_average_models.md  04_arma.md  05_parial_autocorrelation.md  06_arimax_sarima.md
public/: ar2_stationarity_triangle.html  ar_process_demo.html  lowess_demo.html  ma_process_demo.html  sitemap.xml
time-series-book/: README.md  _config.yaml  _toc.yaml  intro.md  references.bib
(+3 files in other folders)
