[project]
name = "time-series-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.sphinx]
extensions = [
    "myst_nb",
]

# Optional MyST-NB specific settings
[tool.myst-nb]
execution_mode = "auto"  # or "cache", "off", "force"
